# rust-gun

./: LICENSE  README.md  SECURITY.md  build.sh  gun.sh  install.sh  logs.sh
app/entry/: run.sh
core/: arch.sh  base.sh  bash.sh  env.sh  fsys.sh  parse.sh  pkg.sh  pkg_old.sh  tool.sh
ensure/: arch.sh  node.sh  php.sh  python.sh  rust.sh  work.sh
entry/: arch.sh  base.sh  build.sh  env.sh  install.sh  installer.sh  load.sh  loader.sh  run.sh  test.sh
exec/: build.sh  install.sh  run.sh
initial/: boot.sh  installer.sh  loader.sh
module/cargo/: base.sh  local.sh  meta.sh  perf.sh  safety.sh  vet.sh
module/file/: base.sh  index.sh
module/forge/: base.sh  index.sh
module/fs/: base.sh  index.sh
module/git/: base.sh  index.sh
module/github/: base.sh  index.sh
module/notify/: base.sh  index.sh
module/ops/: cinema.sh  notify.sh  scaffold.sh  user.sh
module/play/: base.sh  index.sh
module/public/: pretty.sh  safety.sh
module/stack/rust/: cmd.sh  doctor.sh  gates.sh  safety.sh
release/: gun.sh
template/conf/coverage/: .codecov.yml
template/conf/docker/rust/: Dockerfile
template/conf/env/: .dockerignore  .gitattributes
template/conf/format/rust/: .rustfmt.toml
template/conf/github/.github/: CODEOWNERS  labeler.yml  labels.yml
template/conf/github/.github/workflows/: ci.yml  notify.yml
template/conf/license/: LICENSE-APACHE
template/conf/safety/: .gitleaks.toml  .trivy.yml
template/config/audit/: .deny.toml
template/config/env/: .editorconfig  .gitignore
template/config/github/: dependabot.yml
template/config/github/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
template/config/github/.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
template/config/github/.github/workflows/: _base.yml  notify.yml
template/config/github/ISSUE_TEMPLATE/: bug_report.md
template/config/github/rust/.github/workflows/: fuzz.yml
template/config/github/workflows/: labeler.yml  labels.yml
template/config/license/: LICENSE-MIT
template/config/lint/: .clippy.toml
template/config/prettier/: .prettierrc.yml  .taplo.toml  .typos.toml
template/config/safety/: .syft.yml
template/empty/rust/: Cargo.toml
template/empty/src/: main.rs
template/lib/: Cargo.toml
template/lib/rust/benches/: hello.rs
template/lib/rust/bloats/: Cargo.toml
template/lib/rust/fuzz/: Cargo.toml
template/lib/rust/src/: main.rs
template/lib/rust/tests/: hello.rs
template/lib/src/: lib.rs
template/workspace/: Cargo.toml
template/workspace/benches/: Cargo.toml  demo.rs
template/workspace/bloats/: Cargo.toml  demo.rs
template/workspace/rust/examples/: demo.rs
template/workspace/supply-chain/: audits.toml  config.toml
template/workspace/tests/: Cargo.toml  demo.rs
template/ws/rust/crates/demo/: Cargo.toml
template/ws/rust/examples/: Cargo.toml
template/ws/rust/fuzz/: Cargo.toml
template/ws/rust/fuzz/fuzz_targets/: demo.rs
