[package]
name = "__NAME__"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "__DESCRIPTION__"
categories = ["development-tools"]
keywords = ["__NAME__"]
authors = ["__USER__"]
repository = "__REPO_URL__"
homepage = "__REPO_URL__"

[dependencies]

[dev-dependencies]
criterion = "0.8.1"

[lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "allow"
warnings = "deny"

[lints.rustdoc]
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
broken_intra_doc_links = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
disallowed_names = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
todo = "deny"
exit = "deny"
panic = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"
multiple_crate_versions = "allow"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-fat]
inherits = "release"
lto = "fat"

[profile.release.build-override]
opt-level = 0
codegen-units = 256
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
