[workspace]
resolver = "3"
members = ["bloats", "benches", "examples", "tests", "fuzz", "crates/demo"]

[workspace.package]
name = "__NAME__"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "__DESCRIPTION__"
authors = ["__USER__"]
repository = "__REPO_URL__"
homepage = "__REPO_URL__"

[workspace.dependencies]
criterion = "0.8.1"
libfuzzer-sys = "0.4.10"
demo = { path = "crates/demo", version = "0.1.0" }

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "allow"
warnings = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
disallowed_names = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
todo = "deny"
exit = "deny"
panic = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"
multiple_crate_versions = "allow"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-fat]
inherits = "release"
lto = "fat"

[profile.release.build-override]
opt-level = 0
codegen-units = 256
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
