[package]
name = "benches"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
demo.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "demo"
path = "demo.rs"
harness = false
