[package]
name = "tests"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
demo.workspace = true

[[test]]
name = "demo"
path = "demo.rs"
