[package]
name = "fuzz"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
demo.workspace = true
libfuzzer-sys.workspace = true

[[bin]]
name = "demo"
path = "fuzz_targets/demo.rs"
bench = false
test = false
doc = false
